--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                                   <div class="collapse navbar-collapse" id="navbarNav">
                                     <ul class="navbar-nav ms-auto">
                                       <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="bi bi-house-door"></i> Home</a>
+                                        <a class="nav-link" href="index.html"><i class="bi bi-house-door"></i> Home</a>
                                       </li>
                                       <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="bi bi-grid-3x3-gap"></i> Products</a>
+                                        <a class="nav-link" href="Product.html"><i class="bi bi-grid-3x3-gap"></i> Products</a>
                                       </li>
                                       <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="bi bi-box-arrow-in-right"></i> Login</a>
+                                        <a class="nav-link" href="Login.html"><i class="bi bi-box-arrow-in-right"></i> Login</a>
                                       </li>
                                     </ul>
                                   </div>
