--- a/Product.html
+++ b/Product.html
@@ -66,33 +66,96 @@
 </nav>
 
 
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 text-center">
-				<img src="images/ChocolateSale.jpg" alt="Product Image" class="image Description" width="200" height="170">
-				<h2>Product Title</h2>
-				<p>Description of product.</p>
-				<p>Price: $3.00</p>
-				<button class="btn btn-primary">Buy Now</button>
-			</div>
-			<div class="col-md-6 text-center">
-				<img src="images/StrawberrySale.jpg" alt="Product Image" class="image Description" width="200" height="170">
-				<h2>Product Title</h2>
-				<p>Description of product.</p>
-				<p>Price: $3.00</p>
-				<button class="btn btn-primary">Buy Now</button>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-6 text-center">
-				<img src="images/VanillaSale.jpg" alt="Product Image" class="image Description" width="200" height="170">
-				<h2>Product Title</h2>
-				<p>Description of product.</p>
-				<p>Price: $3.00</p>
-				<button class="btn btn-primary">Buy Now</button>
-			</div>
-		</div>
-	</div>
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/ChocolateSale.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Chocolate</h5>
+      <p class="card-text">Indulge in the rich and decadent flavors of a chocolate macaron - a perfect balance of crisp and chewy shell filled with luscious chocolate ganache.</p>
+      <p>Price: $3.00</p>
+      <div class="d-flex justify-content-between">
+        <a href="#" class="btn btn-primary mr-2">Buy Now</a>
+        <a href="#" class="btn btn-outline-primary">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/VanillaSale.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Vanilla</h5>
+      <p class="card-text">Indulge in the delicate and airy sweetness of a vanilla macaron, a classic French treat.</p>
+      <p>Price: $3.00</p>
+      <div class="d-flex justify-content-between">
+        <a href="#" class="btn btn-primary mr-2">Buy Now</a>
+        <a href="#" class="btn btn-outline-primary">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/StrawberrySale.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Strawberry</h5>
+      <p class="card-text">A delicate, melt-in-your-mouth strawberry macaron filled with a luscious strawberry cream.</p>
+      <p>Price: $3.00</p>
+      <div class="d-flex justify-content-between">
+        <a href="#" class="btn btn-primary mr-2">Buy Now</a>
+        <a href="#" class="btn btn-outline-primary">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/PassionFruit.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Passion Fruit</h5>
+      <p class="card-text">Experience the perfect balance of tart and sweet with our passion fruit macaron.</p>
+      <p>Price: $3.00</p>
+      <div class="d-flex justify-content-between">
+        <a href="#" class="btn btn-primary mr-2">Buy Now</a>
+        <a href="#" class="btn btn-outline-primary">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/RedVelvet.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Red Velvet Macron</h5>
+      <p class="card-text">Indulge in the heavenly taste of our red velvet macaron, a perfect combination of crispy shells and a smooth cream cheese filling.</p>
+      <p>Price: $3.00</p>
+      <div class="d-flex justify-content-between">
+        <a href="#" class="btn btn-primary mr-2">Buy Now</a>
+        <a href="#" class="btn btn-outline-primary">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/BirthdayCake.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Birthday Cake</h5>
+      <p class="card-text">Indulge in the sweet and festive flavors of a birthday cake macron, a perfect treat to celebrate any special occasion.</p>
+      <p>Price: $3.00</p>
+      <div class="d-flex justify-content-between">
+        <a href="#" class="btn btn-primary mr-2">Buy Now</a>
+        <a href="#" class="btn btn-outline-primary">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
