--- a/Login.html
+++ b/Login.html
@@ -87,7 +87,7 @@
                             </div>
 
                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                <a class="small" href="#">Forgot Password?</a>
+                                <a class="small" href="ForgotPass.html">Forgot Password?</a>
                                 <button type="submit" class="btn btn-primary">Login</button>
                             </div>
 
