--- a/Product.html
+++ b/Product.html
@@ -76,7 +76,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="images/ChocolateSale.jpg" alt="Card image cap">
+    <img class="card-img-top" src="images/ChocolateSale.jpg" alt="ChocoMac">
     <div class="card-body">
       <h5 class="card-title">Chocolate</h5>
       <p class="card-text">Indulge in the rich and decadent flavors of a chocolate macaron - a perfect balance of crisp and chewy shell filled with luscious chocolate ganache.</p>
@@ -91,7 +91,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="images/VanillaSale.jpg" alt="Card image cap">
+    <img class="card-img-top" src="images/VanillaSale.jpg" alt="VanillaMac">
     <div class="card-body">
       <h5 class="card-title">Vanilla</h5>
       <p class="card-text">Indulge in the delicate and airy sweetness of a vanilla macaron, a classic French treat.</p>
@@ -106,7 +106,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="images/StrawberrySale.jpg" alt="Card image cap">
+    <img class="card-img-top" src="images/StrawberrySale.jpg" alt="StrawberryMac">
     <div class="card-body">
       <h5 class="card-title">Strawberry</h5>
       <p class="card-text">A delicate, melt-in-your-mouth strawberry macaron filled with a luscious strawberry cream.</p>
@@ -121,7 +121,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="images/PassionFruit.jpg" alt="Card image cap">
+    <img class="card-img-top" src="images/PassionFruit.jpg" alt="Passion">
     <div class="card-body">
       <h5 class="card-title">Passion Fruit</h5>
       <p class="card-text">Experience the perfect balance of tart and sweet with our passion fruit macaron.</p>
@@ -136,7 +136,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="images/RedVelvet.jpg" alt="Card image cap">
+    <img class="card-img-top" src="images/RedVelvet.jpg" alt="RedVelvetMac">
     <div class="card-body">
       <h5 class="card-title">Red Velvet Macron</h5>
       <p class="card-text">Indulge in the heavenly taste of our red velvet macaron, a perfect combination of crispy shells and a smooth cream cheese filling.</p>
@@ -151,7 +151,7 @@
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="images/BirthdayCake.jpg" alt="Card image cap">
+    <img class="card-img-top" src="images/BirthdayCake.jpg" alt="BirthdayMac">
     <div class="card-body">
       <h5 class="card-title">Birthday Cake</h5>
       <p class="card-text">Indulge in the sweet and festive flavors of a birthday cake macron, a perfect treat to celebrate any special occasion.</p>
