--- a/checkout.html
+++ b/checkout.html
@@ -168,7 +168,15 @@
     </div>
 
 
-
+    <body>
+      <div class="wrapper">
+        
+      </div>
+      <footer class="site-footer">
+        <p>&copy; 2023 MacDaddy. All rights reserved.</p>
+      </footer>
+    </body>
+    
 
 
 
