--- a/Login.html
+++ b/Login.html
@@ -65,12 +65,12 @@
                     <div class="card-body">
                         <form>
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
+                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" required/>
                                 <label for="inputEmail">Email address</label>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
+                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" required/>
                                 <label for="inputPassword">Password</label>
                             </div>
 
