--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         
 
-        <div class="container">
+        <div class="containerfooter">
           <h2>My Bulleted List</h2>
           <ul>
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
