--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <h2 class="card-title">Customer Feedback</h2>
                   <div class="jumbotron">
                     <p class="lead">As a macaron specialist, I'm happy to say that our macarons have received a lot of positive feedback from our customers. Many people have complimented us on the unique texture and flavor of our macarons, noting that they are both soft and chewy with just the right amount of sweetness. Some customers have even described them as the best macron they've ever had! We take great pride in the quality of our ingredients and the care that goes into making each batch of macron, and it's always gratifying to hear that our customers appreciate our efforts.</p>
-                    <img src="images/GIF.gif" alt="your alt text" class="navbar-gif">
+                    <img src="images/GIF.gif" alt="issaGIF" class="gif">
                   </div>
                 </div>
               </div>
